# algo-trading-notes

./: .gitignore  Manifest.toml  Project.toml  README.md  pyproject.toml
notebooks/: MAANG.ipynb  MAANG_BASS.ipynb  MAANG_BASS_julia.ipynb  SMA_backtesting.ipynb  SMA_backtesting_julia.ipynb  data_sources_julia.ipynb  data_sources_python.ipynb  open_data_sources.ipynb
src/: BASS.py  generate_sample_data.py  mean_reversion_vector_backtestor.py  momentum_vector_backtester.py  sma_vector_backtester.py  technial_analysis_indicators.py
tests/: test_BASS.py
